# 1c_task

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  class_desk-members.html  class_desk.html  class_desk.js  class_desk__coll__graph.map  class_desk__coll__graph.md5  class_desk_a53add0c42bee42351d241548ea1e4bc0_icgraph.map  class_desk_a53add0c42bee42351d241548ea1e4bc0_icgraph.md5  class_desk_a5bf3967069a191ceff399f7097f4f827_icgraph.map  class_desk_a5bf3967069a191ceff399f7097f4f827_icgraph.md5  class_desk_a5c348e77f4a159734604db1845d4999d_cgraph.map  class_desk_a5c348e77f4a159734604db1845d4999d_cgraph.md5  class_desk_a6d2c924adb63b87080f4cf9d2d9e1e99_cgraph.map  class_desk_a6d2c924adb63b87080f4cf9d2d9e1e99_cgraph.md5  class_game_field-members.html  class_game_field.html  class_game_field.js  class_game_field__coll__graph.map  class_game_field__coll__graph.md5  class_game_field_a182163cd2536ddd7aa0a4d217d97210d_cgraph.map  class_game_field_a182163cd2536ddd7aa0a4d217d97210d_cgraph.md5  class_game_field_a182163cd2536ddd7aa0a4d217d97210d_icgraph.map  class_game_field_a182163cd2536ddd7aa0a4d217d97210d_icgraph.md5  class_game_field_a4fe7527a7b45c9bf2ace8e84567ed857_icgraph.map  class_game_field_a4fe7527a7b45c9bf2ace8e84567ed857_icgraph.md5  class_game_field_ab8c66fc127c32536d6e3c4f32ce4b1e3_icgraph.map  class_game_field_ab8c66fc127c32536d6e3c4f32ce4b1e3_icgraph.md5  class_game_field_acb64eac79b36f94f06231dd000102ffe_cgraph.map  class_game_field_acb64eac79b36f94f06231dd000102ffe_cgraph.md5  class_game_field_ad0617ea89db2d131eb76fc4b3774f1ef_icgraph.map  class_game_field_ad0617ea89db2d131eb76fc4b3774f1ef_icgraph.md5  class_game_field_ad6f43cc40a07b62cae067576e08d2683_cgraph.map  class_game_field_ad6f43cc40a07b62cae067576e08d2683_cgraph.md5  class_game_field_ad6f43cc40a07b62cae067576e08d2683_icgraph.map  class_game_field_ad6f43cc40a07b62cae067576e08d2683_icgraph.md5  classes.html  (+40 more)
.github/workflows/: docs.yml  test.yml
core/: CMakeLists.txt
core/Field/: core.hpp
data/: false.json  true.json
docs/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+15 more)
src/: main.cpp
test/: CMakeLists.txt  tests.cpp
